# clawde

./: .gitattributes  .gitignore  LICENSE  README.md  install.ps1  install.sh  pyproject.toml  test.ps1  test_strip.ps1
.github/workflows/: lint.yml  release.yml
cli/: clawde.cmd  clawde.ps1  clawde.py  clawde.sh
config/: clawde.toml
docs/: ARCHITECTURE.md
service/: clawde-proxy.service  clawde-proxy.xml
