[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "clawde"
version = "0.1.0"
description = "Bridge your Claude Work subscription to OpenCode"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = []

[project.scripts]
clawde = "clawde:main"

[tool.setuptools]
py-modules = ["clawde"]
